cleaned up insert method, added getFirst() instead of get(0)